mattwelch-SalesforceAutomatic/src/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Automatic_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Automatic Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Average_Distance_Trip__c</fullName>
        <formula>Total_Distance_Driven__c /  Total_Trips_Taken__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Distance/Trip</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Distance_Driven__c</fullName>
        <label>Total Distance Driven</label>
        <summarizedField>Trip__c.Distance_Miles__c</summarizedField>
        <summaryForeignKey>Trip__c.Vehicle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Trips_Taken__c</fullName>
        <label>Total Trips Taken</label>
        <summaryForeignKey>Trip__c.Vehicle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>Total_Distance_Driven__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>